# python-type-enforcement

./: .pyup.yml  .travis.yml  Makefile  README.md  dev-requirements.txt  noxfile.py  setup.cfg  setup.py
enforce_typing/: __init__.py  check_builtin_types.py  check_future_or_typing_types.py  check_typing_types.py  enforce_typing.py  exceptions.py  test_all.py  type_parser.py
enforce_typing/tests/: __init__.py  test_all.py  test_classes.py  test_future_types.py  test_stdlib_types.py  test_type_parser.py  test_typing_types.py
