[metadata]
name = enforce_typing
version = file: version.txt
description = Function decorator used to enforce static type checking for Python functions
long_description = file: README.md LICENSE
license=MIT
url=https://github.com/mr-strawberry66/python-static-type-checking


[coverage:run]
omit =
    tests/*
    .git/
    .tox/*
    .nox/*
    venv/*
    __pycache__/*


[flake8]
max-complexity = 8
max-line-length = 88
exclude =
    .git,
    .tox,
    .nox,
    venv,
    __pycache__
ignore =
    I201
    W503 # not yet up to date with https://www.flake8rules.com/rules/W503.html


[pylint."MESSAGES CONTROL"]
disable =
    R0801


[sqlfluff]
dialect = bigquery
templater = jinja


[sqlfluff:rules:L010]
capitalisation_policy = lower


[tool.black]
line-length = 88
